--- a/solution/115.不同的子序列.md
+++ b/solution/115.不同的子序列.md
@@ -6,8 +6,8 @@ $$p_{i,j}=\left\{\begin{matrix} p_{i-1,j} & if \; s_{i-1}\ne t_{j-1} \\ p_{i-1,j
 class Solution {
   public:
     int numDistinct(string s, string t) {
-        int n = s.size(), m = t.size();
-        unsigned long long p[n + 1][m + 1];
+        int n = s.size(), m = t.size();        
+        unsigned int p[n + 1][m + 1];
         memset(p, 0, sizeof(p));
         p[0][0] = 1;
         for (int i = 1; i <= n; i++) {
