--- a/solution/115.不同的子序列.md
+++ b/solution/115.不同的子序列.md
@@ -1,6 +1,12 @@
 
 定义$p_{i,j}$为s长为i的前缀的子序列中t长为j的前缀出现的个数,有状态转移方程：
-![](https://latex.codecogs.com/svg.image?&space;p_{i,j}=\left\{\begin{matrix}&space;p_{i-1,j}&space;&&space;if&space;\;&space;s_{i-1}\ne&space;t_{j-1}&space;\\&space;p_{i-1,j}&plus;p_{i-1,j-1}&space;&space;&&space;if&space;\;&space;s_{i-1}=&space;t_{j-1}\end{matrix}\right.)
+$$
+p_{i,j}=\left\{\begin{matrix}
+p_{i-1,j} & if \; s_{i-1}\ne t_{j-1} \\ 
+p_{i-1,j}+p_{i-1,j-1}  & if \; s_{i-1}= t_{j-1}
+\end{matrix}\right.
+$$
+
 ```cpp
 class Solution {
   public:
