--- a/solution/115.不同的子序列.md
+++ b/solution/115.不同的子序列.md
@@ -1,12 +1,7 @@
 
 定义$p_{i,j}$为s长为i的前缀的子序列中t长为j的前缀出现的个数,有状态转移方程：
-$$
-p_{i,j}=\left\lbrace \begin{matrix}
- p_{i-1,j} & if \; s_{i-1}\ne t_{j-1} \\ 
-p_{i-1,j}+p_{i-1,j-1}  & if \; s_{i-1}= t_{j-1}
-\end{matrix}\right.
-$$
 
+![enter image description here](https://latex.codecogs.com/svg.image?&space;p_%7Bi,j%7D=%5Cleft%5C%7B%5Cbegin%7Bmatrix%7D&space;p_%7Bi-1,j%7D&space;&&space;if&space;%5C;&space;s_%7Bi-1%7D%5Cne&space;t_%7Bj-1%7D&space;%5C%5C&space;p_%7Bi-1,j%7D&plus;p_%7Bi-1,j-1%7D&space;&space;&&space;if&space;%5C;&space;s_%7Bi-1%7D=&space;t_%7Bj-1%7D%5Cend%7Bmatrix%7D%5Cright.)
 ```cpp
 class Solution {
   public:
