--- a/solution/1130. 叶值的最小代价生成树.md
+++ b/solution/1130. 叶值的最小代价生成树.md
@@ -1,10 +1,9 @@
 区间dp: 定义$p_{l,r}$为子数组arr[l,r]对应的满足条件的二叉树的非叶节点的值的最小可能总和，同时可以预处理得到$mx_{l,r}=max\{arr[k] \; |\; l\le k\le r \}$，自底向上地考虑树的生成，有状态转移方程：
-$$
-p_{l,r}=\left\{\begin{matrix}
-0  & if \; r-l+1 =1 \\
- min\{ p_{l,k} + p_{k+1,r} +mx_{l,k}\times mx_{k+1,r} \ \; | \; l\le k < r \} & if \; r-l+1>1
-\end{matrix}\right.
-$$
+
+<p align="center">
+  <img src="https://latex.codecogs.com/svg.image?p_{l,r}=\left\lbrace&space;\begin{matrix}0&space;&space;&&space;if&space;\;&space;r-l&plus;1&space;=1&space;\\\\&space;max\{&space;p_{l,k}&space;&plus;&space;p_{k&plus;1,r}&space;&plus;mx_{l,k}\times&space;mx_{k&plus;1,r}&space;\&space;\;&space;|&space;\;&space;l\le&space;k&space;<&space;r&space;\}&space;&&space;if&space;\;&space;r-l&plus;1>1\end{matrix}\right." />
+</p>
+
 
 ```cpp
 class Solution {
