--- a/solution/1171. 从链表中删去总和值为零的连续节点.md
+++ b/solution/1171. 从链表中删去总和值为零的连续节点.md
@@ -1,5 +1,4 @@
-哈希: 定义vis为链表前缀和映射到该前缀的尾节点的哈希表, 遍历链表并维护vis. 设当前节点为cur, 若此时的前缀和s之前出现过,则 ( vis[s] , cur ] 区间上的节点需要被删除, 同时前缀尾节点在这段区间上的映射也要从vis中删除. 
-
+哈希: 定义vis为链表的一个前缀的数值和 映射到该前缀的尾节点的哈希表, 遍历链表并维护vis, 设当前节点为cur, 若此时的前缀和s之前出现过,则 ( vis[s] , cur ] 区间上的节点需要被删除, 同时前缀尾节点在这段区间上的映射也要从vis中删除. 
 
 ```cpp
 class Solution {
